--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,40 @@ body {
   box-sizing: border-box;
   padding: 3rem; }
 
-.card {
+.btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1em 3.5rem;
+  border-radius: 10rem;
+  display: inline-block;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 2rem;
+  margin-top: 2rem; }
+
+.btn:hover {
+  transform: translateY(-1rem);
+  box-shadow: 0 1rem 2rem rgba(34, 34, 34, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.5) scaleY(1.4);
+    opacity: 0; }
+
+.btn:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem rgba(34, 34, 34, 0.2); }
+
+.btn--white {
   background-color: #fff;
-  height: auto;
-  width: 20%;
-  text-align: center;
-  border-radius: 2rem;
-  overflow: hidden;
-  box-shadow: 0 2rem 2rem rgba(34, 34, 34, 0.3);
+  color: #000; }
+  .btn--white::after {
+    background-color: #fff; }
+
+.card {
+  height: 35rem;
   perspective: 150rem;
-  transition: all 0.8s; }
+  -moz-perspective: 150rem;
+  position: relative;
+  width: 25%; }
   .card__heading {
     display: flex;
     align-items: center;
@@ -41,7 +65,6 @@ body {
     .card__heading--3 {
       background-image: linear-gradient(to right bottom, #a044ff, #6a3093); }
   .card__text {
-    font-weight: 400;
     font-size: 2rem;
     padding: 2rem; }
     .card__text ul {
@@ -50,8 +73,48 @@ body {
         padding: 1rem 0; }
         .card__text ul li:not(:last-child) {
           border-bottom: 0.3rem #2222 solid; }
-  .card:hover {
-    transform: rotateY(180deg); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0deg); }
+  .card__side {
+    height: 35rem;
+    transition: all 0.8s ease;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 1rem;
+    box-shadow: 0 1.5rem 4rem rgba(34, 34, 34, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #6dd5ed, #2193b0); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #ef473a, #cb2d3e); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #a044ff, #6a3093); }
+  .card__cta {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%; }
+  .card__price-box {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 8rem; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .plans {
   height: 90vh;
