--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -1,13 +1,9 @@
 .card {
-	background-color: $color-white;
-	height: auto;
-	width: 20%;
-	text-align: center;
-	border-radius: 2rem;
-	overflow: hidden;
-	box-shadow: 0 2rem 2rem rgba($color-text, 0.3);
+	height: 35rem;
 	perspective: 150rem;
-	transition: all 0.8s;
+	-moz-perspective: 150rem;
+	position: relative;
+	width: 25%;
 
 	&__heading {
 		display: flex;
@@ -49,7 +45,6 @@
 	}
 
 	&__text {
-		font-weight: 400;
 		font-size: 2rem;
 		padding: 2rem;
 
@@ -65,7 +60,80 @@
 		}
 	}
 
-	&:hover {
-		transform: rotateY(180deg);
+	&:hover &__side--front {
+		transform: rotateY(-180deg);
+	}
+
+	&:hover &__side--back {
+		transform: rotateY(0deg);
+	}
+
+	&__side {
+		height: 35rem;
+		transition: all 0.8s ease;
+		position: absolute;
+		overflow: hidden;
+		top: 0;
+		left: 0;
+		width: 100%;
+		backface-visibility: hidden;
+		border-radius: 1rem;
+		box-shadow: 0 1.5rem 4rem rgba($color-text, 0.15);
+
+		&--front {
+			// backface-visibility: hidden;
+			background-color: $color-white;
+		}
+
+		&--back {
+			transform: rotateY(180deg);
+
+			&-1 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-primary-light,
+					$color-primary-dark
+				);
+			}
+			&-2 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-secondary-light,
+					$color-secondary-dark
+				);
+			}
+			&-3 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-tertiary-light,
+					$color-tertiary-dark
+				);
+			}
+		}
+	}
+
+	&__cta {
+		text-align: center;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 90%;
+	}
+
+	&__price-box {
+		text-align: center;
+		color: $color-white;
+		margin-bottom: 8rem;
+	}
+
+	&__price-only {
+		font-size: 1.4rem;
+		text-transform: uppercase;
+	}
+
+	&__price-value {
+		font-size: 6rem;
+		font-weight: 100;
 	}
 }
