--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "base/reset";
 @import "base/typography";
 
+@import "components/_button";
 @import "components/card";
 
 @import "layout/card";
